@@ -125,7 +125,8 @@
 	<!--- =========  MapWindow ====================  /-->
 	<plug-in>org.openjump.core.ui.plugin.mousemenu.MoveAlongAnglePlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.mousemenu.RotatePlugIn</plug-in>	
-	<plug-in>org.openjump.core.ui.plugin.mousemenu.EditSelectedSidePlugIn</plug-in>	
+	<plug-in>org.openjump.core.ui.plugin.mousemenu.EditSelectedSidePlugIn</plug-in>
+	<plug-in>org.openjump.core.ui.plugin.mousemenu.ReverseOrientationPlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.tools.JoinTablePlugIn</plug-in>
 	<plug-in>org.openjump.core.ui.plugin.mousemenu.PasteItemsAtPlugIn</plug-in>	
 	<!--- =========  EditTools ====================  /-->
